--- a/stlye.css
+++ b/stlye.css
@@ -3,18 +3,18 @@ body {
     flex-direction: column;
     align-items: center;
     min-height: 100vh;
-    background-color: #000; /* Fundo preto */
+    background-color: #000;
     margin: 0;
     color: white;
 }
 
 #cobrinhaCanvas {
-    border: 2px solid #333; /* Borda cinza escura */
+    border: 2px solid #333;
     display: block;
-    background-color: #111; /* Fundo do canvas preto */
+    background-color: #111;
 }
 
 #pontuacao {
     margin-top: 20px;
     font-size: 24px;
-} 
+}
